[DevTools] Fix telemetry flakiness based on target type

For some unknown reason, crrev.com/468815 caused multiple
telemetry tests to timeout. This patch partially reverts
that revision, applying another fix to original bug by
re-requesting target type on demand.

BUG=718952,717003

Review-Url: https://codereview.chromium.org/2873393002
Cr-Commit-Position: refs/heads/master@{#471102}

Former-commit-id: 8e75b1bc9944bfe1a4a1a006e212418243e96abd